--- a/notebooks/pyspark/advance/S02_Sedona/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/01.Getting_started.ipynb
@@ -133,13 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from sedona.spark import *"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:26:47.752955587Z",
+     "start_time": "2023-10-03T13:26:47.412094312Z"
+    }
    }
   },
   {
@@ -176,53 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/10 14:50:51 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "23/07/10 14:50:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      ":: loading settings :: url = jar:file:/home/pengfei/opt/spark-3.3.0/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /home/pengfei/.ivy2/cache\n",
-      "The jars for the packages stored in: /home/pengfei/.ivy2/jars\n",
-      "org.apache.sedona#sedona-spark-shaded-3.0_2.12 added as a dependency\n",
-      "org.datasyslab#geotools-wrapper added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-272d3114-c8a9-47df-8ba9-db3453457110;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound org.apache.sedona#sedona-spark-shaded-3.0_2.12;1.4.1 in central\n",
-      "\tfound org.datasyslab#geotools-wrapper;1.4.0-28.2 in central\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/sedona/sedona-spark-shaded-3.0_2.12/1.4.1/sedona-spark-shaded-3.0_2.12-1.4.1.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.sedona#sedona-spark-shaded-3.0_2.12;1.4.1!sedona-spark-shaded-3.0_2.12.jar (2226ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/datasyslab/geotools-wrapper/1.4.0-28.2/geotools-wrapper-1.4.0-28.2.jar ...\n",
-      "\t[SUCCESSFUL ] org.datasyslab#geotools-wrapper;1.4.0-28.2!geotools-wrapper.jar (6542ms)\n",
-      ":: resolution report :: resolve 1996ms :: artifacts dl 8779ms\n",
-      "\t:: modules in use:\n",
-      "\torg.apache.sedona#sedona-spark-shaded-3.0_2.12;1.4.1 from central in [default]\n",
-      "\torg.datasyslab#geotools-wrapper;1.4.0-28.2 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   2   |   2   |   2   |   0   ||   2   |   2   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-272d3114-c8a9-47df-8ba9-db3453457110\n",
-      "\tconfs: [default]\n",
-      "\t2 artifacts copied, 0 already retrieved (45803kB/72ms)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/07/10 14:51:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/10/03 15:26:55 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/10/03 15:26:55 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/10/03 15:26:56 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -247,7 +213,11 @@
     "sedona = SedonaContext.create(config)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:07.973448250Z",
+     "start_time": "2023-10-03T13:26:51.449846845Z"
+    }
    }
   },
   {
@@ -301,18 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "file_path=\"../../../../data/county_small.tsv\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:16.761105052Z",
+     "start_time": "2023-10-03T13:27:16.718850558Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -341,9 +315,7 @@
       "|POLYGON ((-92.415...| 05|137|00069902|05137|      Stone|        Stone County| 06| H1|G4020|null| null|null|   A|1570579427| 7841929|+35.8570312|-092.1405728|\n",
       "|POLYGON ((-117.74...| 41|063|01155135|41063|    Wallowa|      Wallowa County| 06| H1|G4020|null| null|null|   A|8148602810|14199330|+45.5937530|-117.1855796|\n",
       "|POLYGON ((-80.518...| 42|007|01214112|42007|     Beaver|       Beaver County| 06| H1|G4020| 430|38300|null|   A|1125901160|24165972|+40.6841401|-080.3507209|\n",
-      "+--------------------+---+---+--------+-----+-----------+--------------------+---+---+-----+----+-----+----+----+----------+--------+-----------+------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "+--------------------+---+---+--------+-----+-----------+--------------------+---+---+-----+----+-----+----+----+----------+--------+-----------+------------+\n"
      ]
     }
    ],
@@ -353,12 +325,16 @@
     "rawDf.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:22.020746979Z",
+     "start_time": "2023-10-03T13:27:18.018702010Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -382,8 +358,7 @@
       " |-- _c14: string (nullable = true)\n",
       " |-- _c15: string (nullable = true)\n",
       " |-- _c16: string (nullable = true)\n",
-      " |-- _c17: string (nullable = true)\n",
-      "\n"
+      " |-- _c17: string (nullable = true)\n"
      ]
     }
    ],
@@ -391,7 +366,11 @@
     "rawDf.printSchema()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:24.063669104Z",
+     "start_time": "2023-10-03T13:27:23.995418229Z"
+    }
    }
   },
   {
@@ -407,8 +386,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 5:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -436,9 +422,7 @@
       "|POLYGON ((-92.415...|        Stone County|\n",
       "|POLYGON ((-117.74...|      Wallowa County|\n",
       "|POLYGON ((-80.518...|       Beaver County|\n",
-      "+--------------------+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "+--------------------+--------------------+\n"
      ]
     },
     {
@@ -454,12 +438,16 @@
     "spatialDf.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:29.271650867Z",
+     "start_time": "2023-10-03T13:27:27.443806840Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -467,8 +455,7 @@
      "text": [
       "root\n",
       " |-- county_shape: geometry (nullable = true)\n",
-      " |-- county_name: string (nullable = true)\n",
-      "\n"
+      " |-- county_name: string (nullable = true)\n"
      ]
     }
    ],
@@ -476,7 +463,11 @@
     "spatialDf.printSchema()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:27:31.242922392Z",
+     "start_time": "2023-10-03T13:27:31.158308903Z"
+    }
    }
   },
   {
