--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -99,55 +99,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:13.644912403Z",
-     "start_time": "2023-09-27T15:01:13.504222304Z"
+     "end_time": "2023-10-03T15:09:26.742502193Z",
+     "start_time": "2023-10-03T15:09:26.432063046Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/09/27 17:01:18 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "23/09/27 17:01:18 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      ":: loading settings :: url = jar:file:/home/pengfei/opt/spark-3.3.0/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /home/pengfei/.ivy2/cache\n",
-      "The jars for the packages stored in: /home/pengfei/.ivy2/jars\n",
-      "graphframes#graphframes added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-721567a5-7fa4-4f83-a31b-ffd1a21fa62a;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound graphframes#graphframes;0.8.2-spark3.2-s_2.12 in spark-packages\n",
-      "\tfound org.slf4j#slf4j-api;1.7.16 in central\n",
-      ":: resolution report :: resolve 455ms :: artifacts dl 38ms\n",
-      "\t:: modules in use:\n",
-      "\tgraphframes#graphframes;0.8.2-spark3.2-s_2.12 from spark-packages in [default]\n",
-      "\torg.slf4j#slf4j-api;1.7.16 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   2   |   0   |   0   |   0   ||   2   |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-721567a5-7fa4-4f83-a31b-ffd1a21fa62a\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 2 already retrieved (0kB/11ms)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/09/27 17:01:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/10/03 17:09:31 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/10/03 17:09:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/10/03 17:09:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -186,14 +153,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:24.771028686Z",
-     "start_time": "2023-09-27T15:01:14.595248474Z"
+     "end_time": "2023-10-03T15:09:37.320714451Z",
+     "start_time": "2023-10-03T15:09:27.939546056Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "vertices = spark.createDataFrame([('1', 'Carter', 'Derrick', 50),\n",
@@ -222,14 +189,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:33.714754740Z",
-     "start_time": "2023-09-27T15:01:29.609885507Z"
+     "end_time": "2023-10-03T13:06:37.806036183Z",
+     "start_time": "2023-10-03T13:06:32.910134886Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -246,14 +213,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:39.081793543Z",
-     "start_time": "2023-09-27T15:01:39.024979979Z"
+     "end_time": "2023-10-03T13:06:43.006160056Z",
+     "start_time": "2023-10-03T13:06:42.867746706Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -280,14 +247,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:40.724249641Z",
-     "start_time": "2023-09-27T15:01:40.103765275Z"
+     "end_time": "2023-10-03T13:06:47.632137940Z",
+     "start_time": "2023-10-03T13:06:47.363066200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -319,14 +286,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:42.464802967Z",
-     "start_time": "2023-09-27T15:01:42.159257214Z"
+     "end_time": "2023-10-03T13:06:49.579024897Z",
+     "start_time": "2023-10-03T13:06:49.043102136Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
@@ -361,8 +328,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:01:51.946059280Z",
-     "start_time": "2023-09-27T15:01:49.860855648Z"
+     "end_time": "2023-10-03T13:06:53.308426851Z",
+     "start_time": "2023-10-03T13:06:50.948987478Z"
     }
    }
   },
@@ -381,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -413,14 +380,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:29:14.171211649Z",
-     "start_time": "2023-09-27T15:29:14.104056883Z"
+     "end_time": "2023-10-03T13:06:59.734522393Z",
+     "start_time": "2023-10-03T13:06:57.745936647Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -437,8 +404,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:29:27.040558371Z",
-     "start_time": "2023-09-27T15:29:25.467699257Z"
+     "end_time": "2023-10-03T13:07:04.839662398Z",
+     "start_time": "2023-10-03T13:07:03.172842898Z"
     }
    }
   },
@@ -455,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -478,12 +445,16 @@
     "filteredNode.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:07:17.369000004Z",
+     "start_time": "2023-10-03T13:07:16.758724800Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stderr",
@@ -513,12 +484,16 @@
     "filteredByDegree.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:07:20.179197596Z",
+     "start_time": "2023-10-03T13:07:18.623765767Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -547,12 +522,16 @@
     "filteredEdge.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:07:22.468786754Z",
+     "start_time": "2023-10-03T13:07:22.063124197Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -575,8 +554,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-27T15:09:20.113816938Z",
-     "start_time": "2023-09-27T15:09:19.344410146Z"
+     "end_time": "2023-10-03T13:07:25.336948865Z",
+     "start_time": "2023-10-03T13:07:25.004508861Z"
     }
    }
   },
@@ -597,25 +576,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "spark.sparkContext.setCheckpointDir(\"/tmp/graphframes_cps\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:07:28.872432690Z",
+     "start_time": "2023-10-03T13:07:28.698384279Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pengfei/.cache/pypoetry/virtualenvs/sparkcommonfunc-jby-k8HJ-py3.8/lib/python3.8/site-packages/pyspark/sql/dataframe.py:127: UserWarning: DataFrame constructor is internal. Do not directly use it.\n",
-      "  warnings.warn(\"DataFrame constructor is internal. Do not directly use it.\")\n",
       "                                                                                \r"
      ]
     },
@@ -642,7 +623,11 @@
     "g.connectedComponents().show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:08:22.228899905Z",
+     "start_time": "2023-10-03T13:07:30.687191150Z"
+    }
    }
   },
   {
@@ -810,14 +795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pengfei/.cache/pypoetry/virtualenvs/sparkcommonfunc-jby-k8HJ-py3.8/lib/python3.8/site-packages/pyspark/sql/dataframe.py:127: UserWarning: DataFrame constructor is internal. Do not directly use it.\n",
-      "  warnings.warn(\"DataFrame constructor is internal. Do not directly use it.\")\n",
       "                                                                                \r"
      ]
     },
@@ -843,7 +826,11 @@
     "g.triangleCount().show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-03T13:08:42.185369895Z",
+     "start_time": "2023-10-03T13:08:33.608160998Z"
+    }
    }
   },
   {
