--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -94,7 +94,8 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from graphframes import *\n",
-    "import os"
+    "import os\n",
+    "from pathlib import Path"
    ],
    "metadata": {
     "collapsed": false,
@@ -102,6 +103,23 @@
      "end_time": "2023-10-03T15:09:26.742502193Z",
      "start_time": "2023-10-03T15:09:26.432063046Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# build the jar path offline\n",
+    "# jar_folder = Path(r\"/home/pengfei/git/PySparkCommonFunc/jars\")\n",
+    "# jar_list = [str(jar) for jar in jar_folder.iterdir() if jar.is_file()]\n",
+    "# jar_path = \",\".join(jar_list)\n",
+    "\n",
+    "# replace the spark.jars.packages by below line\n",
+    "# config('spark.jars', jar_path)"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -131,14 +149,14 @@
     "if local:\n",
     "    spark = SparkSession.builder\\\n",
     "        .master(\"local[4]\")\\\n",
-    "        .appName(\"RepartitionAndCoalesce\")\\\n",
-    "        .config(\"spark.executor.memory\", \"4g\")\\\n",
+    "        .appName(\"GraphX\")\\\n",
+    "        .config(\"spark.driver.memory\", \"4g\")\\\n",
     "        .config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12') \\\n",
     "        .getOrCreate()\n",
     "else:\n",
     "    spark = SparkSession.builder\\\n",
     "        .master(\"k8s://https://kubernetes.default.svc:443\")\\\n",
-    "        .appName(\"RepartitionAndCoalesce\")\\\n",
+    "        .appName(\"GraphX\")\\\n",
     "        .config(\"spark.kubernetes.container.image\", \"inseefrlab/jupyter-datascience:master\")\\\n",
     "        .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\", os.environ['KUBERNETES_SERVICE_ACCOUNT'])\\\n",
     "        .config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12') \\\n",
