--- a/notebooks/pyspark/advance/S01_GraphX/03.Biparti_graph.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/03.Biparti_graph.ipynb
@@ -124,14 +124,14 @@
     "if local:\n",
     "    spark = SparkSession.builder\\\n",
     "        .master(\"local[4]\")\\\n",
-    "        .appName(\"RepartitionAndCoalesce\")\\\n",
-    "        .config(\"spark.executor.memory\", \"4g\")\\\n",
+    "        .appName(\"GraphX\")\\\n",
+    "        .config(\"spark.driver.memory\", \"4g\")\\\n",
     "        .config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12') \\\n",
     "        .getOrCreate()\n",
     "else:\n",
     "    spark = SparkSession.builder\\\n",
     "        .master(\"k8s://https://kubernetes.default.svc:443\")\\\n",
-    "        .appName(\"RepartitionAndCoalesce\")\\\n",
+    "        .appName(\"GraphX\")\\\n",
     "        .config(\"spark.kubernetes.container.image\", \"inseefrlab/jupyter-datascience:master\")\\\n",
     "        .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\", os.environ['KUBERNETES_SERVICE_ACCOUNT'])\\\n",
     "        .config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12') \\\n",
