--- a/notebooks/pyspark/advance/S02_Sedona/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/01.Getting_started.ipynb
@@ -133,16 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "from sedona.spark import *"
+    "from sedona.spark import *\n",
+    "from pathlib import Path"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:26:47.752955587Z",
-     "start_time": "2023-10-03T13:26:47.412094312Z"
+     "end_time": "2023-10-04T09:04:31.492173236Z",
+     "start_time": "2023-10-04T09:04:31.447929311Z"
     }
    }
   },
@@ -172,10 +173,54 @@
    "source": [
     "#### 2.2.1 Create sedona context from scratch\n",
     "\n",
-    "The below example shows how to create a sedona context from scratch"
+    "The below example shows how to create a sedona context from scratch.\n",
+    "\n",
+    "We need extra jars for the sedona classes. To load these jars into the spark context, you can use the two below config:\n",
+    "- \"spark.jars.packages\", \"package id\" : It will download the jar for both driver node and worker node. But you need to have internet connection\n",
+    "- \"spark.jars\", \"jar path\": This config requires you to download jar manually on the local file system of the driver and worker node. You don't need internet connection anymore."
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/04 11:03:09 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/10/04 11:03:09 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/10/04 11:03:10 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build a sedona session offline\n",
+    "jar_folder = Path(r\"/home/pengfei/git/PySparkCommonFunc/jars\")\n",
+    "jar_list = [str(jar) for jar in jar_folder.iterdir() if jar.is_file()]\n",
+    "jar_path = \",\".join(jar_list)\n",
+    "\n",
+    "config = SedonaContext.builder(). \\\n",
+    "    config('spark.jars', jar_path). \\\n",
+    "    getOrCreate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T09:03:16.135736302Z",
+     "start_time": "2023-10-04T09:03:02.276902678Z"
+    }
    }
   },
   {
@@ -202,21 +247,42 @@
     }
    ],
    "source": [
-    "# build a sedona session (sedona >= 1.4.1)\n",
+    "# build a sedona session (sedona >= 1.4.1) online\n",
     "config = SedonaContext.builder(). \\\n",
     "    config('spark.jars.packages',\n",
     "           'org.apache.sedona:sedona-spark-shaded-3.0_2.12:1.4.1,'\n",
     "           'org.datasyslab:geotools-wrapper:1.4.0-28.2'). \\\n",
-    "    getOrCreate()\n",
-    "\n",
-    "# create a sedona context\n",
-    "sedona = SedonaContext.create(config)"
+    "    getOrCreate()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-10-03T13:27:07.973448250Z",
      "start_time": "2023-10-03T13:26:51.449846845Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# create a sedona context\n",
+    "sedona = SedonaContext.create(config)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T09:05:17.499201323Z",
+     "start_time": "2023-10-04T09:05:06.362811495Z"
     }
    }
   },
@@ -271,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "file_path=\"../../../../data/county_small.tsv\""
@@ -279,14 +345,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:27:16.761105052Z",
-     "start_time": "2023-10-03T13:27:16.718850558Z"
+     "end_time": "2023-10-04T09:05:23.576356114Z",
+     "start_time": "2023-10-04T09:05:23.509317077Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -327,14 +393,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:27:22.020746979Z",
-     "start_time": "2023-10-03T13:27:18.018702010Z"
+     "end_time": "2023-10-04T09:05:27.911915724Z",
+     "start_time": "2023-10-04T09:05:24.426135190Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -368,8 +434,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:27:24.063669104Z",
-     "start_time": "2023-10-03T13:27:23.995418229Z"
+     "end_time": "2023-10-04T09:05:29.869512967Z",
+     "start_time": "2023-10-04T09:05:29.614913287Z"
     }
    }
   },
