--- a/notebooks/pyspark/advance/S01_GraphX/02.GraphX_application_example.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/02.GraphX_application_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -24,13 +24,17 @@
     "from graphframes import GraphFrame"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:01:36.119048961Z",
+     "start_time": "2023-10-05T09:01:35.599121923Z"
+    }
    },
    "id": "c4ef7e2de4e76efc"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def buildEdgesLabels(InGraph:GraphFrame):\n",
@@ -56,14 +60,69 @@
     "    plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:01:37.225960219Z",
+     "start_time": "2023-10-05T09:01:37.206604851Z"
+    }
    },
    "id": "546aa3eb90aa61dc"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/05 11:01:40 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/10/05 11:01:40 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      ":: loading settings :: url = jar:file:/home/pengfei/opt/spark-3.3.0/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/pengfei/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/pengfei/.ivy2/jars\n",
+      "graphframes#graphframes added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-32be10a5-a565-4748-aa59-b86ba015cd1b;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound graphframes#graphframes;0.8.2-spark3.2-s_2.12 in spark-packages\n",
+      "\tfound org.slf4j#slf4j-api;1.7.16 in central\n",
+      ":: resolution report :: resolve 248ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tgraphframes#graphframes;0.8.2-spark3.2-s_2.12 from spark-packages in [default]\n",
+      "\torg.slf4j#slf4j-api;1.7.16 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   2   |   0   |   0   |   0   ||   2   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-32be10a5-a565-4748-aa59-b86ba015cd1b\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 2 already retrieved (0kB/6ms)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/05 11:01:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "local=True\n",
@@ -90,17 +149,33 @@
     "spark.conf.set(\"spark.sql.repl.eagerEval.enabled\",True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:01:45.636012048Z",
+     "start_time": "2023-10-05T09:01:38.555339412Z"
+    }
    },
    "id": "7a2f93d4afc5bc77"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/pengfei/git/PySparkCommonFunc/data/doctors.csv\n"
+     ]
+    }
+   ],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:01:48.406938218Z",
+     "start_time": "2023-10-05T09:01:48.390391574Z"
+    }
    },
    "id": "7377c6ae49efcb24"
   }
