--- a/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/01.Getting_started.ipynb
@@ -100,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:09:26.742502193Z",
-     "start_time": "2023-10-03T15:09:26.432063046Z"
+     "end_time": "2023-10-05T09:06:42.104991061Z",
+     "start_time": "2023-10-05T09:06:42.026193042Z"
     }
    }
   },
@@ -130,9 +130,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/10/03 17:09:31 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "23/10/03 17:09:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "23/10/03 17:09:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/10/05 11:06:47 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "23/10/05 11:06:47 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      ":: loading settings :: url = jar:file:/home/pengfei/opt/spark-3.3.0/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/pengfei/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/pengfei/.ivy2/jars\n",
+      "graphframes#graphframes added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-e33d9bac-ee6c-4f1c-bdb3-a00ac34cc2f5;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound graphframes#graphframes;0.8.2-spark3.2-s_2.12 in spark-packages\n",
+      "\tfound org.slf4j#slf4j-api;1.7.16 in central\n",
+      ":: resolution report :: resolve 196ms :: artifacts dl 5ms\n",
+      "\t:: modules in use:\n",
+      "\tgraphframes#graphframes;0.8.2-spark3.2-s_2.12 from spark-packages in [default]\n",
+      "\torg.slf4j#slf4j-api;1.7.16 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   2   |   0   |   0   |   0   ||   2   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-e33d9bac-ee6c-4f1c-bdb3-a00ac34cc2f5\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 2 already retrieved (0kB/4ms)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23/10/05 11:06:48 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -171,8 +204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:09:37.320714451Z",
-     "start_time": "2023-10-03T15:09:27.939546056Z"
+     "end_time": "2023-10-05T09:06:52.681050671Z",
+     "start_time": "2023-10-05T09:06:44.102254336Z"
     }
    }
   },
@@ -207,8 +240,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:06:37.806036183Z",
-     "start_time": "2023-10-03T13:06:32.910134886Z"
+     "end_time": "2023-10-05T09:06:59.155140211Z",
+     "start_time": "2023-10-05T09:06:54.090544703Z"
     }
    }
   },
@@ -231,8 +264,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:06:43.006160056Z",
-     "start_time": "2023-10-03T13:06:42.867746706Z"
+     "end_time": "2023-10-05T09:07:04.359759159Z",
+     "start_time": "2023-10-05T09:07:03.975227458Z"
     }
    }
   },
@@ -265,8 +298,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:06:47.632137940Z",
-     "start_time": "2023-10-03T13:06:47.363066200Z"
+     "end_time": "2023-10-05T09:07:09.249803301Z",
+     "start_time": "2023-10-05T09:07:08.937477467Z"
     }
    }
   },
@@ -304,8 +337,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:06:49.579024897Z",
-     "start_time": "2023-10-03T13:06:49.043102136Z"
+     "end_time": "2023-10-05T09:07:11.713441500Z",
+     "start_time": "2023-10-05T09:07:11.205365741Z"
     }
    }
   },
@@ -346,8 +379,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:06:53.308426851Z",
-     "start_time": "2023-10-03T13:06:50.948987478Z"
+     "end_time": "2023-10-05T09:07:23.399433302Z",
+     "start_time": "2023-10-05T09:07:21.620824384Z"
     }
    }
   },
@@ -435,26 +468,24 @@
     "A GraphFrame itself can’t be filtered, but DataFrames deducted from a Graph can. Consequently, the filter-function (or any other function) can be used just as you would use it with DataFrames. The only trap-hole might be the correct use of quotation marks: the whole condition should be quoted. The examples below should clarify this."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:10:34.822128697Z",
+     "start_time": "2023-10-05T09:10:34.707680444Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+------+---------+---+\n",
-      "| id|  name|firstname|age|\n",
-      "+---+------+---------+---+\n",
-      "|  1|Carter|  Derrick| 50|\n",
-      "|  3| Mills|     Jeff| 80|\n",
-      "|  4|  Hood|   Robert| 65|\n",
-      "|  5| Banks|     Mike| 93|\n",
-      "+---+------+---------+---+\n"
-     ]
+     "data": {
+      "text/plain": "'/home/pengfei/git/PySparkCommonFunc/data/doctors.csv'"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -465,35 +496,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:07:17.369000004Z",
-     "start_time": "2023-10-03T13:07:16.758724800Z"
+     "end_time": "2023-10-05T09:10:46.607133210Z",
+     "start_time": "2023-10-05T09:10:46.503972942Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pengfei/.cache/pypoetry/virtualenvs/sparkcommonfunc-jby-k8HJ-py3.8/lib/python3.8/site-packages/pyspark/sql/dataframe.py:127: UserWarning: DataFrame constructor is internal. Do not directly use it.\n",
-      "  warnings.warn(\"DataFrame constructor is internal. Do not directly use it.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+--------+\n",
-      "| id|inDegree|\n",
-      "+---+--------+\n",
-      "|  3|       4|\n",
-      "|  1|       2|\n",
-      "|  5|       2|\n",
-      "+---+--------+\n"
-     ]
+     "data": {
+      "text/plain": "8"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -504,8 +522,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-03T13:07:20.179197596Z",
-     "start_time": "2023-10-03T13:07:18.623765767Z"
+     "end_time": "2023-10-05T09:11:05.332683968Z",
+     "start_time": "2023-10-05T09:11:04.019839326Z"
     }
    }
   },
