add data incremental processing

--- a/notebooks/pyspark/advance/S01_GraphX/02.GraphX_application_example.ipynb
+++ b/notebooks/pyspark/advance/S01_GraphX/02.GraphX_application_example.ipynb
@@ -357,13 +357,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pengfei/.cache/pypoetry/virtualenvs/sparkcommonfunc-jby-k8HJ-py3.8/lib/python3.8/site-packages/pyspark/sql/dataframe.py:127: UserWarning: DataFrame constructor is internal. Do not directly use it.\n",
+      "  warnings.warn(\"DataFrame constructor is internal. Do not directly use it.\")\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "+---+--------------+--------------------+---+---------+\n| id|          name|               title|age|distances|\n+---+--------------+--------------------+---+---------+\n|P11|   Hood_Robert|             patient| 65|       {}|\n| D3|    Mills_Jeff|           ophthalmo| 80|       {}|\n|P10|    Mills_Jeff|             patient| 80|       {}|\n|P12|    Banks_Mike|             patient| 93|       {}|\n| D8|Carter_Derrick|             dentist| 50|       {}|\n|P15|   Jim_Cameron|             patient| 26|       {}|\n| D2|   May_Derrick|        pediatrician| 26|{D2 -> 0}|\n|P13|      Berg_Tim|             patient| 28|       {}|\n| P1|       Foo_Bar|             patient| 26|       {}|\n| D1|Carter_Derrick|             dentist| 50|{D1 -> 0}|\n| D4|   Hood_Robert|general_practitioner| 65|       {}|\n|P14|    Page_Allan|             patient| 16|       {}|\n| D6|      Berg_Tim|general_practitioner| 28|       {}|\n| P4|   Hood_Robert|             patient| 65|       {}|\n| D9|   Wins_Carter|general_practitioner| 28|       {}|\n| D5|    Banks_Mike|             surgeon| 43|       {}|\n| P2|   May_Derrick|             patient| 26|       {}|\n| P7|    Page_Allan|             patient| 16|       {}|\n| P6|      Berg_Tim|             patient| 28|       {}|\n| D7|    Page_Allan|general_practitioner| 16|       {}|\n+---+--------------+--------------------+---+---------+\nonly showing top 20 rows",
+      "text/html": "<table border='1'>\n<tr><th>id</th><th>name</th><th>title</th><th>age</th><th>distances</th></tr>\n<tr><td>P11</td><td>Hood_Robert</td><td>patient</td><td>65</td><td>{}</td></tr>\n<tr><td>D3</td><td>Mills_Jeff</td><td>ophthalmo</td><td>80</td><td>{}</td></tr>\n<tr><td>P10</td><td>Mills_Jeff</td><td>patient</td><td>80</td><td>{}</td></tr>\n<tr><td>P12</td><td>Banks_Mike</td><td>patient</td><td>93</td><td>{}</td></tr>\n<tr><td>D8</td><td>Carter_Derrick</td><td>dentist</td><td>50</td><td>{}</td></tr>\n<tr><td>P15</td><td>Jim_Cameron</td><td>patient</td><td>26</td><td>{}</td></tr>\n<tr><td>D2</td><td>May_Derrick</td><td>pediatrician</td><td>26</td><td>{D2 -&gt; 0}</td></tr>\n<tr><td>P13</td><td>Berg_Tim</td><td>patient</td><td>28</td><td>{}</td></tr>\n<tr><td>P1</td><td>Foo_Bar</td><td>patient</td><td>26</td><td>{}</td></tr>\n<tr><td>D1</td><td>Carter_Derrick</td><td>dentist</td><td>50</td><td>{D1 -&gt; 0}</td></tr>\n<tr><td>D4</td><td>Hood_Robert</td><td>general_practitioner</td><td>65</td><td>{}</td></tr>\n<tr><td>P14</td><td>Page_Allan</td><td>patient</td><td>16</td><td>{}</td></tr>\n<tr><td>D6</td><td>Berg_Tim</td><td>general_practitioner</td><td>28</td><td>{}</td></tr>\n<tr><td>P4</td><td>Hood_Robert</td><td>patient</td><td>65</td><td>{}</td></tr>\n<tr><td>D9</td><td>Wins_Carter</td><td>general_practitioner</td><td>28</td><td>{}</td></tr>\n<tr><td>D5</td><td>Banks_Mike</td><td>surgeon</td><td>43</td><td>{}</td></tr>\n<tr><td>P2</td><td>May_Derrick</td><td>patient</td><td>26</td><td>{}</td></tr>\n<tr><td>P7</td><td>Page_Allan</td><td>patient</td><td>16</td><td>{}</td></tr>\n<tr><td>P6</td><td>Berg_Tim</td><td>patient</td><td>28</td><td>{}</td></tr>\n<tr><td>D7</td><td>Page_Allan</td><td>general_practitioner</td><td>16</td><td>{}</td></tr>\n</table>\nonly showing top 20 rows\n"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.shortestPaths(landmarks=[\"D1\",\"D2\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:52:21.987512521Z",
+     "start_time": "2023-10-05T09:52:05.069679022Z"
+    }
+   },
+   "id": "523889c02a14756f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "+---+--------------+--------------------+---+------------------+\n| id|          name|               title|age|         distances|\n+---+--------------+--------------------+---+------------------+\n|P11|   Hood_Robert|             patient| 65|                {}|\n| D3|    Mills_Jeff|           ophthalmo| 80|         {P1 -> 1}|\n|P10|    Mills_Jeff|             patient| 80|                {}|\n|P12|    Banks_Mike|             patient| 93|                {}|\n| D8|Carter_Derrick|             dentist| 50|         {P3 -> 1}|\n|P15|   Jim_Cameron|             patient| 26|                {}|\n| D2|   May_Derrick|        pediatrician| 26|                {}|\n|P13|      Berg_Tim|             patient| 28|                {}|\n| P1|       Foo_Bar|             patient| 26|         {P1 -> 0}|\n| D1|Carter_Derrick|             dentist| 50|         {P3 -> 1}|\n| D4|   Hood_Robert|general_practitioner| 65|{P3 -> 1, P1 -> 1}|\n|P14|    Page_Allan|             patient| 16|                {}|\n| D6|      Berg_Tim|general_practitioner| 28|                {}|\n| P4|   Hood_Robert|             patient| 65|                {}|\n| D9|   Wins_Carter|general_practitioner| 28|                {}|\n| D5|    Banks_Mike|             surgeon| 43|                {}|\n| P2|   May_Derrick|             patient| 26|                {}|\n| P7|    Page_Allan|             patient| 16|                {}|\n| P6|      Berg_Tim|             patient| 28|                {}|\n| D7|    Page_Allan|general_practitioner| 16|                {}|\n+---+--------------+--------------------+---+------------------+\nonly showing top 20 rows",
+      "text/html": "<table border='1'>\n<tr><th>id</th><th>name</th><th>title</th><th>age</th><th>distances</th></tr>\n<tr><td>P11</td><td>Hood_Robert</td><td>patient</td><td>65</td><td>{}</td></tr>\n<tr><td>D3</td><td>Mills_Jeff</td><td>ophthalmo</td><td>80</td><td>{P1 -&gt; 1}</td></tr>\n<tr><td>P10</td><td>Mills_Jeff</td><td>patient</td><td>80</td><td>{}</td></tr>\n<tr><td>P12</td><td>Banks_Mike</td><td>patient</td><td>93</td><td>{}</td></tr>\n<tr><td>D8</td><td>Carter_Derrick</td><td>dentist</td><td>50</td><td>{P3 -&gt; 1}</td></tr>\n<tr><td>P15</td><td>Jim_Cameron</td><td>patient</td><td>26</td><td>{}</td></tr>\n<tr><td>D2</td><td>May_Derrick</td><td>pediatrician</td><td>26</td><td>{}</td></tr>\n<tr><td>P13</td><td>Berg_Tim</td><td>patient</td><td>28</td><td>{}</td></tr>\n<tr><td>P1</td><td>Foo_Bar</td><td>patient</td><td>26</td><td>{P1 -&gt; 0}</td></tr>\n<tr><td>D1</td><td>Carter_Derrick</td><td>dentist</td><td>50</td><td>{P3 -&gt; 1}</td></tr>\n<tr><td>D4</td><td>Hood_Robert</td><td>general_practitioner</td><td>65</td><td>{P3 -&gt; 1, P1 -&gt; 1}</td></tr>\n<tr><td>P14</td><td>Page_Allan</td><td>patient</td><td>16</td><td>{}</td></tr>\n<tr><td>D6</td><td>Berg_Tim</td><td>general_practitioner</td><td>28</td><td>{}</td></tr>\n<tr><td>P4</td><td>Hood_Robert</td><td>patient</td><td>65</td><td>{}</td></tr>\n<tr><td>D9</td><td>Wins_Carter</td><td>general_practitioner</td><td>28</td><td>{}</td></tr>\n<tr><td>D5</td><td>Banks_Mike</td><td>surgeon</td><td>43</td><td>{}</td></tr>\n<tr><td>P2</td><td>May_Derrick</td><td>patient</td><td>26</td><td>{}</td></tr>\n<tr><td>P7</td><td>Page_Allan</td><td>patient</td><td>16</td><td>{}</td></tr>\n<tr><td>P6</td><td>Berg_Tim</td><td>patient</td><td>28</td><td>{}</td></tr>\n<tr><td>D7</td><td>Page_Allan</td><td>general_practitioner</td><td>16</td><td>{}</td></tr>\n</table>\nonly showing top 20 rows\n"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.shortestPaths(landmarks=[\"P1\",\"P3\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T09:53:23.604766084Z",
+     "start_time": "2023-10-05T09:53:15.009143357Z"
+    }
+   },
+   "id": "e90420623eb06d33"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "523889c02a14756f"
+   "id": "2a6f8262f49ec9ee"
   }
  ],
  "metadata": {
